made a folder structure

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </div>
             <div class="buttontrade">
-                <button><a href="link-tradenow.html">Trade now</a></button>
+                <button><a href="links/link-tradenow.html">Trade now</a></button>
             </div>
         </div>
     </header>
@@ -49,7 +49,7 @@
                         blockchain
                         technology.</p>
                     <div>
-                        <button class="fontpop"><a href="link-whitelisted.html">Get Whitelisted</a></button>
+                        <button class="fontpop"><a href="links/link-whitelisted.html">Get Whitelisted</a></button>
                     </div>
                 </div>
                 <div class="none">
@@ -272,7 +272,7 @@
                             <img src="images/img.svg" style="margin-top: -13.47px;" width="100%">
                         </div>
                         <div>
-                            <h5 class="fontpop"><a href="link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
+                            <h5 class="fontpop"><a href="links/link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
                             </a></h5>
                         </div>
                         <div class="paragraph">
@@ -299,7 +299,7 @@
                             <img src="images/img (1).svg" style="margin-top: -13.47px;" width="100%">
                         </div>
                         <div>
-                            <h5 class="fontpop"><a href="link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
+                            <h5 class="fontpop"><a href="links/link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
                             </a></h5>
                         </div>
                         <div class="paragraph">
@@ -326,7 +326,7 @@
                             <img src="images/img (2).svg" style="margin-top: -13.47px;" width="100%">
                         </div>
                         <div>
-                            <h5 class="fontpop"><a href="link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
+                            <h5 class="fontpop"><a href="links/link-artical1.html">New Leveraged Pairs Added to Margin Trading on the Crypto.com Exchange
                             </a></h5>
                         </div>
                         <div class="paragraph">
@@ -383,47 +383,47 @@
                 <div>
                     <ul>
                       <li class="title">Company</li>
-                        <a href="link-company.html"><li>About us</li></a>
-                        <a href="link-company.html"><li>Terms of use</li></a>
-                        <a href="link-company.html"><li>Privacy Policy</li></a>
-                        <a href="link-company.html"><li>Disclaimer</li></a>
+                        <a href="links/link-company.html"><li>About us</li></a>
+                        <a href="links/link-company.html"><li>Terms of use</li></a>
+                        <a href="links/link-company.html"><li>Privacy Policy</li></a>
+                        <a href="links/link-company.html"><li>Disclaimer</li></a>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li class="title">Businesses</li>
-                        <a href="link-businesses.html"><li>Prime</li></a>
-                        <a href="link-businesses.html"><li>Custody</li></a>
-                        <a href="link-businesses.html"><li>Asset Hub</li></a>
-                        <a href="link-businesses.html"><li>Commerce</li></a>
+                        <a href="links/link-businesses.html"><li>Prime</li></a>
+                        <a href="links/link-businesses.html"><li>Custody</li></a>
+                        <a href="links/link-businesses.html"><li>Asset Hub</li></a>
+                        <a href="links/link-businesses.html"><li>Commerce</li></a>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li class="title">Exchange</li>
-                        <a href="link-exchange.html"><li>Exchange Home</li></a>
-                        <a href="link-exchange.html"><li>Margin Trading</li></a>
-                        <a href="link-exchange.html"><li>Derivatives Trading</li></a>
-                        <a href="link-exchange.html"><li>Trading Area</li></a>
+                        <a href="links/link-exchange.html"><li>Exchange Home</li></a>
+                        <a href="links/link-exchange.html"><li>Margin Trading</li></a>
+                        <a href="links/link-exchange.html"><li>Derivatives Trading</li></a>
+                        <a href="links/link-exchange.html"><li>Trading Area</li></a>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li class="title">Blockchain</li>
-                        <a href="link-blockchain.html"><li>Chain Explorer</li></a>
-                        <a href="link-blockchain.html"><li>The Syndicate</li></a>
-                        <a href="link-blockchain.html"><li>Security</li></a>
-                        <a href="link-blockchain.html"><li>Cryptous Credit</li></a>
+                        <a href="links/link-blockchain.html"><li>Chain Explorer</li></a>
+                        <a href="links/link-blockchain.html"><li>The Syndicate</li></a>
+                        <a href="links/link-blockchain.html"><li>Security</li></a>
+                        <a href="links/link-blockchain.html"><li>Cryptous Credit</li></a>
                     </ul>
                 </div>
                 <div>
                     <ul>
                         <li class="title">Resources</li>
-                        <a href="link-resources.html"><li>Prices</li></a>
-                        <a href="link-resources.html"><li>Site Widgets</li></a>
-                        <a href="link-resources.html"><li>Tax</li></a>
-                        <a href="link-resources.html"><li>Blog</li></a>
-                        <a href="link-resources.html"><li>Research</li></a>
+                        <a href="links/link-resources.html"><li>Prices</li></a>
+                        <a href="links/link-resources.html"><li>Site Widgets</li></a>
+                        <a href="links/link-resources.html"><li>Tax</li></a>
+                        <a href="links/link-resources.html"><li>Blog</li></a>
+                        <a href="links/link-resources.html"><li>Research</li></a>
                     </ul>
                 </div>
             </div>
