--- a/links/link-company.html
+++ b/links/link-company.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto-Businesses</title>
+    <title>Crypto-Company</title>
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link href="images/Group.svg" rel="icon">
+    <link href="Group.svg" rel="icon">
 </head>
 <style>
     body {
@@ -45,7 +45,7 @@
     <header class="fontpop">
         <div class="headercontainer">
             <div class="logo">
-                <img src="images/Group.svg" alt="logo">
+                <img src="Group.svg" alt="logo">
                 <p>Cryptous</p>
             </div>
             <div class="nav">
@@ -79,7 +79,7 @@
         </div>
     </header>
     <section>
-        <div>Businesses</div>
+        <div>Company</div>
     </section>
     <footer id="footer">
         <div class="footercontainer">
@@ -136,10 +136,10 @@
                     <p>Copyright 2021, Cryptous</p>
                 </div>
                 <div>
-                    <button class="iconbut"><a href="https://www.facebook.com/" target="blank"><img src="images/Icon 1.svg"></a></button>
-                    <button class="iconbut"><a href="https://twitter.com/" target="blank"><img src="images/Icon 2.svg"></a></button>
-                    <button class="iconbut"><a href="https://www.linkedin.com/" target="blank"><img src="images/Icon 3.svg"></a></button>
-                    <button class="iconbut"><a href="https://www.instagram.com/" target="blank"><img src="images/Icon 4.svg"></a></button>
+                    <button class="iconbut"><a href="https://www.facebook.com/" target="blank"><img src="Icon 1.svg"></a></button>
+                    <button class="iconbut"><a href="https://twitter.com/" target="blank"><img src="Icon 2.svg"></a></button>
+                    <button class="iconbut"><a href="https://www.linkedin.com/" target="blank"><img src="Icon 3.svg"></a></button>
+                    <button class="iconbut"><a href="https://www.instagram.com/" target="blank"><img src="Icon 4.svg"></a></button>
                 </div>
             </div>
         </div>
